[workspace]
resolver = "2"
members = [
    "crates/rb-core",
    "crates/rb-ai",
    "crates/rb-app",
    "crates/rb-bam-tools",
    "crates/rb-deseq2",
    "crates/rb-expr-norm",
    "crates/rb-fastq-viewer",
    "crates/rb-gene-length",
    "crates/rb-genome-viewer",
    "crates/rb-gff-convert",
    "crates/rb-plugin",
    "crates/rb-qc",
    "crates/rb-rustqc",
    "crates/rb-star-align",
    "crates/rb-star-index",
    "crates/rb-trimming",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
directories = "5"
which = "6"
toml = "0.8"
include_dir = "0.7"
glob = "0.3"
shlex = "1"
bincode = "1.3"
sha1 = "0.10"
noodles-bam = "0.88"
noodles-sam = "0.84"
noodles-fastq = "0.22"
noodles-fasta = "0.60"
noodles-gff = "0.56"
noodles-bed = "0.33"
noodles-bgzf = "0.46"
noodles-tabix = "0.61"
noodles-csi = "0.55"
noodles-core = "0.19"
